Support Gateway Management API beta
