# lib/autorest/models/index.js
@@ -28,3 +28,9 @@ exports.ODataResponseListReport = require('./oDataResponseListReport');
 exports.ODataResponseListImport = require('./oDataResponseListImport');
 exports.ODataResponseListWorkspace = require('./oDataResponseListWorkspace');
 exports.Workspace = require('./workspace');
+exports.ODataResponseListGateway = require('./oDataResponseListGateway');
+exports.Gateway = require('./gateway');
+exports.GatewayPublicKey = require('./gatewayPublicKey');
+exports.WorkspaceId = require('./workspaceId');
+exports.ODataResponseString = require('./oDataResponseString');
+exports.CreateGatewayRequest = require('./createGatewayRequest');
